--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
@@ -11,6 +12,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "react-toolbox": "^2.0.0-beta.6",
     "redux": "^3.7.0",
+    "redux-saga": "^0.15.4",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
