Re-working environment files.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# These are cross build env defaults
 REACT_APP_PREFS_API_HOST=undefined
 REACT_APP_MIA_SEARCH_HOST=https://collections.artsmia.org
 REACT_APP_ADMIN_CLIENT_VERSION=x.y.z
