secure optional for utility api, dashboard

--- a/app.yaml
+++ b/app.yaml
@@ -29,9 +29,9 @@ handlers:
 - url: /(.+)
   static_files: build/index.html
   upload: build/index.html
-  secure: always
+  secure: optional
 
 - url: /
   static_files: build/index.html
   upload: build/index.html
-  secure: always
+  secure: optional
